fleet-applications/keycloak/config/overlays/clusters/marth52-playground/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - keycloak.marth52creative.xyz
      secretName: tls-keycloak
  rules:
    - host: keycloak.marth52creative.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
